[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/inventory_ui.gd" id="1"]

[node name="InventoryUI" type="CanvasLayer"]
layer = 5
visible = false
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.9

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="ItemList" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeedSelect" type="HBoxContainer" parent="Panel/VBox"]

[node name="SeedLabel" type="Label" parent="Panel/VBox/SeedSelect"]
layout_mode = 2
text = "Selected Seed: None"

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Close"
